kustomize/demo-deplyoment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: demoapp
      app.kubernetes.io/name: demoapp
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: demoapp
        app.kubernetes.io/name: demoapp
    spec:
      containers:
        - name: demoapp
          image: 'registry.redhat.io/jboss-webserver-6/jws61-openjdk17-openshift-rhel8:latest'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: demoapp
      serviceAccount: demoapp
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
