kustomize/demo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoapp
  labels:
    app.kubernetes.io/instance: demoapp
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/instance: demoapp
