kustomize/demo-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp
  labels:
    app.kubernetes.io/instance: demoapp
spec:
  rules:
    - host: route-demoapp-demo-kai.apps.cluster-wlx9h.sandbox1782.opentlc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp
                port:
                  number: 8080
